<resources>
    <string name="app_name">BabbaBazri</string>
    <string name="facebook_app_id">407332209676101</string>
    <string name="fb_login_protocol_scheme">fb407332209676101</string>

    //Google Api
    <string name="google_maps_API_key">AIzaSyB7tIYFdkzHflflwJOdiX8LUrPSILU_-T4</string>


    <string name="api_hiting">Please wait...</string>
    <string name="notempty">Not Empty</string>
    <string name="mobile_no_not_valid">Mobile Number is not valid</string>
    <string name="password_validation">Password must be 6 character</string>
    <string name="passs_and_confirm_pass">Password and Confirm Password does not match</string>
    <string name="title_activity_owner__profile">Owner_Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mukesh Verma</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="registration_as_owner">Registration as Owner</string>
    <string name="password">Password</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="id_card_pan_card_aadhar_card">ID Card, PAN Card, Aadhar Card</string>
    <string name="submit">Submit</string>
    <string name="network_error_msg">Sorry! Not connected to internet</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_up">New User to Signup</string>
    <string name="mobile_no">Enter your Mobile No.</string>
    <string name="login">Login</string>
    <string name="token">token</string>
    <string name="waiting_for_net">waiting_for_net</string>
    <string name="if_network_is_connect_automatically_redirect">If Network is connect automatically redirect</string>

    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="title_activity_user__profile">User_Profile</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="book_latter">BOOK LATER</string>
    <string name="book_now">BOOK NOW</string>
    <string name="enter_address_city_and_zip_code">Enter Address, City and Zip Code</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="trending_product">Trending Product</string>
    <string name="near_by">Near by</string>
    <string name="support_gmail_com">support@gmail.com</string>
    <string name="invite_earn">Invite</string>
    <string name="refer_earn_des">Invite your friend to the Babba Bazri Application</string>
    <!--<string name="refer_earn_des_2">Invite more, and earn."</string>-->
    <string name="drop_location">Drop Location</string>
    <string name="set_up_payment">Set Up payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="change_email_tv">We will send a verification link to this email address. Post Verification, it will be added to your account.</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">gps_network_not_enabled</string>
    <string name="open_location_settings">open_location_settings</string>
    <string name="list_empty"> Sorry Your Order List is Empty!!!</string>
    <string name="list_empty_item"> Sorry item list not found!!!</string>
    <string name="notification_list"> Sorry You dont have notification !!!</string>
    <string name="book_your_order">Book Your Order</string>
    <string name="my_order_list">My Order List</string>
    <string name="refer">Refer</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="notification">Notification</string>
    <string name="otp_sent">Otp sent on your mobile number</string>
    <string name="verifiy_otp">Verify Otp</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="signup">SignUp</string>
    <string name="virify_mobile">Verify Mobile Number</string>
    <string name="sign_up_successfully">Sign Up SuccessFully!!!</string>
    <string name="mobile_not_verified">Mobile Number doesn\'t verified</string>
    <string name="back_again">Please click BACK again to exit</string>
    <string name="you_want_logout">Are you sure, you want to LogOut?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="profile_update_successfully">Successfully Update Your Profile</string>
    <string name="already_have_order">You have an order ongoing, please wait untill it deliver to you</string>
    <string name="gps_setting">GPS is settings</string>
    <string name="gps_setting_menu">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="my_location">My Location</string>
    <string name="location_not_found">unable to Found current location</string>
    <string name="mobile">Mobile Number</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hinid">Hindi</string>
    <string name="login_success">Login Successfully</string>
    <string name="something_wrong">Something Worng</string>
    <string name="your_current_location_is">Your Current location is</string>
    <string name="current_location">Current location</string>
    <string name="choose_location">Choose location</string>
    <string name="request">Request</string>
    <string name="order_details">Order Details</string>
    <string name="select_date">Select Date</string>
    <string name="quantity">Quantity:</string>
    <string name="unit">Unit:</string>
    <string name="price">Price:</string>
    <string name="loading">Loading:</string>
    <string name="unloading">Unloading:</string>
    <string name="driversalary">DriverSalary:</string>
    <string name="driver_daily_exp">Driver Daily Exp:</string>
    <string name="helper">Helper:</string>
    <string name="royalty">Royalty:</string>
    <string name="toll_tax">Toll Tax:</string>
    <string name="driver_saving">Driver Saving:</string>
    <string name="night_stay">Night Stay:</string>
    <string name="min_charge">Min Charge:</string>
    <string name="total_km">Total KM:</string>
    <string name="tyres">Tyres:</string>
    <string name="days">Days:</string>
    <string name="total_price">Estimate price :</string>
    <string name="confirm_order_request">Confirm Order Request</string>
    <string name="order_request_success">Successfully Submit Your Order Request</string>
    <string name="booking_status">Booking status:</string>
    <string name="material_name">Material Name</string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="distance">Distance:</string>
    <string name="delivery_status">Delivery status:</string>
    <string name="price_details">Price Details</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="booking_not_confired">Booking Not Confirmed Yet</string>
    <string name="your_order_cancel">Your Booking Order Cancel</string>
    <string name="driver_not_assign">Driver not Assign</string>
    <string name="your_order_completed">Your Order Delivery Completed!!</string>
    <string name="not_dispatched">Your Product not dispatched yet!!</string>
    <string name="share_the_link">Share the Link</string>
    <string name="send_feedback">Send feedback</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password_success">Successfully Change Your Password!!</string>
    <string name="new_and_confirm_not_match">New Password and Confirm New Password doesn\'t match</string>
    <string name="give_rating">GIVE RATING</string>
    <string name="completed">COMPLETED</string>
    <string name="price_chart">Price chart</string>
    <string name="type">Type:</string>
    <string name="truck_location">Truck Location</string>
    <string name="price_not_get">Price not get</string>
    <string name="for_order_confirm_choose_payment_option">For Order Confirm Choose Payment Option</string>
    <string name="order_confirm_cod">Click Ok to Confirm Booking Your Order. And if you are not interested to click Cancel</string>
    <string name="enter_drop_location">Enter Drop Location</string>
    <string name="search_place_here">Search Place Here</string>
    <string name="near_by_product">Near By Product</string>
    <string name="with_price">With Price</string>
    <string name="without_price">Without price</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="not_confirmed">Not Confirmed</string>
    <string name="truck">Truck</string>
    <string name="dumper">Dumper</string>
    <string name="trolla">Trolla</string>
    <string name="pick_up">Pick Up</string>
    <string name="tractor_trolly">Tractor Trolly</string>
    <string name="tractor">Tractor</string>
    <string name="load_km">fuel consumption in loading:</string>
    <string name="unload_km">fuel consumption in unloading:</string>
    <string name="away">away</string>
    <string name="or">or</string>
    <string name="call_driver">CALL DRIVER</string>
    <string name="rating">Rating</string>
    <string name="your_amount">Your Amount</string>
    <string name="confirm">Confirm</string>
    <string name="not_confirm">Not Confirmed</string>
    <string name="pending">Pending</string>
    <string name="data_not_found">data not found</string>
    <string name="select_lang_text">Please select your preffered language for \n BabbaBazri Application</string>
    <string name="hindi">Hindi</string>
    <string name="select_lang">Please Select Language!!!</string>
    <string name="verify_success">Verify Successfully</string>
    <string name="otp_required">opt required</string>
    <string name="success_chage_pass">Successfully change your passeord</string>
    <string name="gst_tax">GST</string>
    <string name="booking_success">Booking confirm successfully</string>
    <string name="change_language">Change Language</string>
    <string name="about_us"></string>
    <string name="your_order_will_arrive_in">Your order will arrive in:</string>
    <string name="enter_valid_add">Enter Valid Address</string>

</resources>
