<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/underline"
    android:layout_height="match_parent"
    tools:context=".Activities.Change_Password">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_change"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        android:background="@color/underline"
        app:layout_collapseMode="pin">
    </android.support.v7.widget.Toolbar>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/current_password"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/linewithconner_rect"
        android:hint="@string/current_password"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/new_password_changepassword"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/linewithconner_rect"
        android:hint="@string/new_password"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/confirm_new_password_changepassword"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/linewithconner_rect"
        android:hint="@string/confirm_new_password"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:visibility="gone"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:background="@drawable/login_button"
            android:id="@+id/change_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/save"
            android:textAllCaps="false"
            android:background="@drawable/login_button"
            android:id="@+id/change_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>