<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_lang"
            android:src="@drawable/language"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_35sdp" />
        <TextView
            android:textStyle="bold"
            android:id="@+id/mnb3"
            android:text="@string/language"
            android:gravity="center|start"
            android:textSize="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_weight="1"
            android:text="@string/english"
            android:layout_marginEnd="@dimen/_10sdp"
            android:id="@+id/en"
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp" />
        <RadioButton
            android:text="@string/hinid"
            android:layout_weight="1"
            android:id="@+id/hi"
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp" />
    </RadioGroup>


</LinearLayout>