<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/neterror"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/netlogo"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_above="@id/netpro"
        android:layout_below="@+id/netlogo"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/nointernet"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/netpro"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginEnd="121dp"
        android:text="@string/waiting_for_net"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f43260" />

    <TextView
        android:textColor="#fff"
        android:id="@+id/retry"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="#f53464"
        android:gravity="center"
        android:text="@string/if_network_is_connect_automatically_redirect" />

    <ProgressBar
        android:id="@+id/netpro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retry"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

</RelativeLayout>